--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
+    "mavon-editor": "^2.8.3",
+    "qs": "^6.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
